[package]
name = "trusted-server-core"
version = "0.1.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
cookie = { workspace = true }
derive_more = { workspace = true }
error-stack = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
iab_gpp = { workspace = true }
jose-jwk = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
rand = { workspace = true }
lol_html = { workspace = true }
matchit = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
toml = { workspace = true }
trusted-server-js = { path = "../js" }
trusted-server-openrtb = { path = "../openrtb" }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
ed25519-dalek = { workspace = true }
edgezero-core = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Enable JS-backed RNG for `wasm32-unknown-unknown` targets (e.g. Cloudflare Workers).
# The Fastly adapter uses `wasm32-wasip1`, which has native POSIX RNG and does not
# need these — this block is intentionally scoped to `target_os = "unknown"` only.
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }

[build-dependencies]
config = { workspace = true }
derive_more = { workspace = true }
error-stack = { workspace = true }
http = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[features]
default = []

[dev-dependencies]
criterion = { workspace = true }
edgezero-core = { workspace = true, features = ["test-utils"] }
temp-env = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "consent_decode"
harness = false
