[package]
name = "trusted-server-core"
version = "0.1.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
cookie = { workspace = true }
derive_more = { workspace = true }
error-stack = { workspace = true }
# Still required by ec/kv.rs (KV Store compare-and-swap via InsertMode +
# generation preconditions, which the EdgeZero KvStore trait does not expose
# yet) and ec/rate_limiter.rs (fastly::erl Edge Rate Limiting). Removal is
# deferred until EdgeZero grows equivalent APIs — tracked in issue #495.
fastly = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
iab_gpp = { workspace = true }
jose-jwk = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
rand = { workspace = true }
lol_html = { workspace = true }
matchit = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
toml = { workspace = true }
trusted-server-js = { path = "../js" }
trusted-server-openrtb = { path = "../openrtb" }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
ed25519-dalek = { workspace = true }
edgezero-core = { workspace = true }

[features]
default = []
# Exposes test-only constructors (e.g. `IntegrationRegistry::from_request_filters`)
# so downstream crates can build registries with stub integrations in their tests.
test-utils = []

[dev-dependencies]
config = { workspace = true }
criterion = { workspace = true }
edgezero-core = { workspace = true, features = ["test-utils"] }
temp-env = { workspace = true }

[[bench]]
name = "consent_decode"
harness = false
