[package]
name = "trusted-server-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true

[[test]]
name = "parity"
path = "tests/parity.rs"
harness = true

[lints]
workspace = true

[dependencies]
edgezero-core = { workspace = true }
serde_json = { workspace = true }
trusted-server-core = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true }
edgezero-adapter-axum = { workspace = true, features = ["axum"] }
env_logger = { workspace = true }
error-stack = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "cookies"] }
scraper = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
tower = { workspace = true, features = ["util"] }
trusted-server-adapter-axum = { path = "../trusted-server-adapter-axum" }
trusted-server-adapter-cloudflare = { path = "../trusted-server-adapter-cloudflare" }
trusted-server-adapter-spin = { path = "../trusted-server-adapter-spin" }
urlencoding = { workspace = true }
