[package]
name = "trusted-server-js"
version = "0.1.0"
edition = "2021"
description = "Trusted Server tsjs — TypeScript-built JS embedded in a Rust crate."
license = "Apache-2.0"
build = "build.rs"

[lints]
workspace = true

[lib]
doctest = false
name = "trusted_server_js"
path = "src/lib.rs"

[build-dependencies]
build-print = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
which = { workspace = true }

[dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
