[package]
name = "trusted-server-js"
description = "Trusted Server tsjs — TypeScript-built JS embedded in a Rust crate."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }
build = "build.rs"

[lints]
workspace = true

[lib]
doctest = false
name = "trusted_server_js"
path = "src/lib.rs"
test = false

[build-dependencies]
build-print = { workspace = true }
which = { workspace = true }

[dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
