[package]
name = "trusted-server-openrtb-codegen"
description = "Protobuf codegen for the Trusted Server OpenRTB types."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
prost-build = { workspace = true }
