[package]
name = "trusted-server-geo-fastly"
version = "0.1.0"
authors = []
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
trusted-server-core = { workspace = true }
error-stack = { workspace = true }
fastly = { workspace = true }
